Test/crash_logs/crash_log_TypeError_2023-10-13_23-06-37.txt
Error Type: TypeError
System Information:
System: Windows
Node: DESKTOP-4HHR1F9
Release: 10
Version: 10.0.22621
Machine: AMD64
Processor: AMD64 Family 23 Model 24 Stepping 1, AuthenticAMD
Total RAM: 6323187712 bytes
Available RAM: 374951936 bytes
RAM Usage: 94.1%


Exception Information:
Traceback (most recent call last):
  File "D:\Hackathon\Test\fatal.py", line 60, in generate_random_errors
    a = "5" + 5
TypeError: can only concatenate str (not "int") to str
